Fixed issue where overflow prevented smooth scrolling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,7 +11,8 @@
 }
 
 .content {
-  height: calc(100vh - 64px);
+  min-height: calc(100vh - 64px);
+  height: fit-content;
   margin: auto;
   display: flex;
   justify-content: center;
